--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ section#login{
     transition-timing-function: ease;
 }
 
+input{
+    margin: 10px 0px;
+}
+
 section#login > div#imagem{
     display: block;
     background: var(--lilás) url(../img/pexels-victor-freitas-841130.jpg) no-repeat;
@@ -63,3 +67,44 @@ div#formulario > p{
     font-size: 0.8em;
 }
 
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--orange);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #fd4204;
+    box-shadow: 0px 0px 10px var(--orange);
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    background-color: white;
+    border: 2px solid #7a22b4;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #7a22b4;
+}
+
+form > a.botao:hover{
+    background-color: #7a22b4;
+    box-shadow: 0px 0px 10px var(--lilás);
+    color: #320d4b;
+}
+
+form > a.botao > span{
+    font-size: 0.8em;
+ 
+}
