--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
     width: 250px;
@@ -40,6 +39,7 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.384);
     transition: width .1s, height .1s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 input{
@@ -106,5 +106,42 @@ form > a.botao:hover{
 
 form > a.botao > span{
     font-size: 0.8em;
- 
+}
+
+form > div.campo{
+    background-color: var(--orange);
+    border: 2px solid var(--orange);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px ;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > input{
+    background-color: #252525;
+    font-size: 1em;
+    width: calc(100% - 44px);
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+
+div.campo > input:focus-within{
+    background-color: white;
+    border: none;
+}
+
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
 }
